# scube-official

./: MISC.md  README.md  XCUBE.md  environment.yml  pyproject.toml  requirements.txt  setup.sh  test.py  train.py
configs/train/vae/: vae_128x128x128_sparse_residual.yaml
configs/waymo_scube/: dataset.yaml  train_diffusion_256x256x128_sparse.yaml  train_diffusion_64x64x64_image_cond.yaml  train_gsm_unet3d_view3.yaml  train_vae_256x256x128_sparse.yaml  train_vae_64x64x64_dense_height_down2_residual.yaml
datagen/: nerfstudio2webdataset.py  scube_data_utils.py  shapenet_example.py  waymo2nerfstudio.py
ext/: __init__.py
ext/nksr-cuda/nksr/nn/: unet.py
inference/: diffusion.py  diffusion_cascading_gsm.py  download_pretrain.py  gaussian_feedforward.py  sample_objaverse.py  sample_shapenet.py  sample_waymo.py  vae.py  visualize_3dgs_pkl.py  visualize_grid_compare.py  visualize_gt_pc.py  visualize_object.py  visualize_scene.py
scube/data/: __init__.py  base_wds.py  objaverse.py  shapenet.py  waymo.py  waymo_wds.py
scube/models/: autoencoder.py  base_model.py  diffusion.py  gsm.py
scube/modules/autoencoding/: base_encoder.py  hparams.py  sunet.py
scube/modules/autoencoding/losses/: base_loss.py  nksr_loss.py
scube/modules/diffusionmodules/openaimodel/: attention_dense.py  attention_sparse.py  unet_dense.py  unet_sparse.py  unet_sparse_crossattn.py
scube/modules/encoders/: box3d_encoder.py
scube/modules/sky/: skybox_panorama_full.py
scube/utils/: common_util.py  gaussian_util.py  voxel_util.py  wandb_util.py
(+9 files in other folders)
